--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AulaManager",
+  "name": "aulamanager",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -27,9 +27,11 @@
     "@capacitor/keyboard": "6.0.2",
     "@capacitor/status-bar": "6.0.1",
     "@ionic/angular": "^8.0.0",
-    "angular-bootstrap-md": "^15.0.0",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
     "ionicons": "^7.0.0",
+    "mysql2": "^3.11.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
