--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "ionicons": "^7.0.0",
+    "moment-timezone": "^0.5.46",
     "mysql2": "^3.11.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
